--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Dia",
-  "short_name": "Dia",
+  "name": "sqltansuo",
+  "short_name": "sqltansuo",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
