--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "dia",
+  "name": "sqltansuo",
   "version": "1.0.0",
-  "description": "dia",
+  "description": "sqltansuo",
   "main": "server.js",
   "dependencies": {
     "express": "^4.18.2"
